[4SOAT-RM350985] - Refactors
